--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
 			<div class="row no-gutters slider-text js-fullheight justify-content-center align-items-center">
 				<div class="col-lg-8 col-md-6 ftco-animate d-flex align-items-center">
 					<div class="text text-center">
-						<span class="subheading">Hey! I am</span>
+						<span class="subheading">Hello World! I am</span>
 						<h1>김예지</h1>
-						<h2>I'm a
+						<h2>
 							<span class="txt-rotate" data-period="500"
-								data-rotate='[  "풀스택 개발자", "웹개발자", "4년차"]'></span>
+								data-rotate='[  "FE/BE 개발자", "웹 개발자", "4년차 개발자"]'></span>
 						</h2>
 					</div>
 				</div>
@@ -102,11 +102,11 @@
 					<div class="counter-wrap ftco-animate d-flex mt-md-3">
 						<div class="text">
 							<p class="mb-4">
-								<span class="number" data-number="24">0</span>
+								<span class="number" data-number="7">0</span>
 								<span>Project complete</span>
 							</p>
 							<p><a target="_blank"
-									href="https://drive.google.com/file/d/1uJg0Yun35HWc4YsEKfEX5L6Uyik5MPl_/view?usp=sharing"
+									href="https://drive.google.com/file/d/1DDGPQ_sQA9_JW3pFuJkSFrP9pZqGsj58/view?usp=sharing"
 									class="btn btn-primary py-3 px-3">이력서 다운받기</a></p>
 						</div>
 					</div>
@@ -115,7 +115,7 @@
 		</div>
 	</section>
 
-	<section class="ftco-section ftco-no-pb ftco-counter img" id="section-counter">
+	<!-- <section class="ftco-section ftco-no-pb ftco-counter img" id="section-counter">
 		<div class="container-fluid px-md-5">
 			<div class="row d-md-flex align-items-center">
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
@@ -152,7 +152,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
 	<section class="ftco-section ftco-no-pb goto-here" id="resume-section">
@@ -176,11 +176,10 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2010-2015</span>
-								<h2>컴퓨터 공학 & 전자 공학 복수 전공</h2>
-								<span class="position">Handong Global Univercity</span>
-								<p>전산 동아리 활동과 기숙사 생활을 통해, 함께 일하는 밥을 배웠습니다. Computer Science 기초 지식을 4년간 탄탄히 쌓아 빠르고 올바른
-									방향으로 성장할 수 있는 개발자가 되었습니다. </p>
+								<span class="date">2014-2019</span>
+								<h2>경영학 전공</h2>
+								<span class="position">Chosun University</span>
+								<p>우연히 수강했던 데이터베이스 수업에 큰 매력을 느껴 멀지 않은 미래에 IT업계 종사를 생각하게 되었습니다.</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -188,12 +187,10 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2014-2015</span>
-								<h2>Computer Processing Systems/Computer Software</h2>
-								<span class="position">Cambridge University</span>
-								<p>A small river named Duden flows by their place and supplies it with the necessary
-									regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-									into your mouth.</p>
+								<span class="date">2021-2021</span>
+								<h2>스마트 인재 개발원 교육 수강</h2>
+								<span class="position">SMHRD</span>
+								<p>본격적으로 개발자라는 직업에 대한 열망을 품고 국비학원에 등록했습니다. 기초지식을 탄탄히 쌓아 개발철학이 있는 개발자가 되었습니다.</p>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -201,37 +198,45 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2014-2015</span>
-								<h2>Diploma in Computer</h2>
-								<span class="position">Cambridge University</span>
-								<p>A small river named Duden flows by their place and supplies it with the necessary
-									regelialia. It is a paradisematic country, in which roasted parts of sentences fly
-									into your mouth.</p>
+								<span class="date">2022-2022</span>
+								<h2>부스트코스 코칭스터디</h2>
+								<span class="position">boostcourse</span>
+								<p>네이버 커넥트재단에서 운영하는 부스트코스에서 '모두를 위한 파이썬' 코스를 수강했고 리드부스터로 활동했습니다.</p>
+							</div>
+						</div>
+						<div class="resume-wrap d-flex ftco-animate">
+							<div class="icon d-flex align-items-center justify-content-center">
+								<span class="flaticon-ideas"></span>
+							</div>
+							<div class="text pl-3">
+								<span class="date">2023-2023</span>
+								<h2>모두의연구소 풀잎스쿨</h2>
+								<span class="position">MODULABS</span>
+								<p>모두의 연구소에서 운영하는 풀잎스쿨에서 파이썬과 POSTGRE SQL를 이용한 데이터분석 스터디에 참여했습니다.</p>
 							</div>
 						</div>
 					</div>
 
-					<div id="page-2" class="page two">
+					<div id="page-2" class="page two"> 
 						<h2 class="heading">Work Experience</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2019.09-2021.04(1년 8개월)</span>
+								<span class="date">2021.06-2022.12(1년 6개월)</span>
 								<h2>Full Stack Developer</h2>
-								<span class="position">주식회사 더라피스</span>
-								<p>동남아 스파 예약 서비스 Web 개발, 온라인 요가 수업 예약/결제 서비스 개발<br /></p>
+								<span class="position">주식회사 아이티윈스</span>
+								<p>서울요양원 서비스, 정부24 등 공공 프로젝트 개발 및 유지보수<br /></p>
 								<b class="text-primary">기술 스택</b>
-								<p>ReactJS, Next.js,Typescript, Styled-components, AWS S3 static hosting</p>
+								<p>eGovFrame, Java, jsp, javascript, jQuery, Tibero, Oracle</p>
 								<b class="text-primary">주요 업무 </b>
 								<div>
-									<div> - React + typescript 기반 웹 서비스 개발/운영</div>
-									<div> - 디자인 시스템 도입을 위한 UI 컴포넌트 관리용 storybook 도입</div>
-									<div> - SEO를 위한 Next.js 도입</div>
-									<div> - Serverless 환경을 위한 s3 기반의 static hosting 구축</div>
+									<div> - 국민건강보험공단 서울요양원 관리 시스템 개발</div>
+									<div> - 환자 정보 통합 카드 시스템 설계 및 구현</div>
+									<div> - 코드 최적화 및 유지보수성 향상을 위한 리팩토링</div>
+									<div> - 테이블 명세서 및 산출물 작성</div>
 								</div>
-								</p>
 							</div>
 
 						</div>
@@ -240,41 +245,19 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2014-2015</span>
-								<h2>Web Designer</h2>
-								<span class="position">Cambridge University</span>
-								<p>A small river named Duden flows by their place and supplies it with the necessary
-									regelialia. It is a paradisematic country, in which roasted parts of sentences
-									fly
-									into your mouth.</p>
-							</div>
-						</div>
-						<div class="resume-wrap d-flex ftco-animate">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
-							</div>
-							<div class="text pl-3">
-								<span class="date">2014-2015</span>
-								<h2>Web Marketing</h2>
-								<span class="position">Cambridge University</span>
-								<p>A small river named Duden flows by their place and supplies it with the necessary
-									regelialia. It is a paradisematic country, in which roasted parts of sentences
-									fly
-									into your mouth.</p>
-							</div>
-						</div>
-						<div class="resume-wrap d-flex ftco-animate">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
-							</div>
-							<div class="text pl-3">
-								<span class="date">2014-2015</span>
-								<h2>Art &amp; Creative Director</h2>
-								<span class="position">Side Tech</span>
-								<p>A small river named Duden flows by their place and supplies it with the necessary
-									regelialia. It is a paradisematic country, in which roasted parts of sentences
-									fly
-									into your mouth.</p>
+								<span class="date">2023.03-재직중</span>
+								<h2>Full Stack Developer</h2>
+								<span class="position">주식회사 씨씨미디어서비스</span>
+								<p>기상청, 팜한농 등 공공 및 기업부문 서비스 구축</p>
+								<b class="text-primary">기술 스택</b>
+								<p>eGovFrame, Java, jsp, javascript, jQuery, Tibero, python, SpringBoot, JPA, QueryDsl, MariaDB, React, TypeScript</p>
+								<b class="text-primary">주요 업무 </b>
+								<div>
+									<div> - 배치 프로세스 구현 및 통계 데이터 차트 시각화 개발</div>
+									<div> - 레거시 시스템 소스 마이그레이션 및 커뮤니티 기능 구현</div>
+									<div> - 담당 기능 개발 및 외부 협력사와 기술적 의견 교환</div>
+									<div> - 데이터 수집 및 분석 시스템 설계</div>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -706,7 +689,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Address</h3>
-							<p>성남시 분당구 정자동</p>
+							<p>서울특별시 금천구 가산동</p>
 						</div>
 					</div>
 				</div>
@@ -717,7 +700,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Contact Number</h3>
-							<p><a href="tel://1234567920">+ 010 4277 1234</a></p>
+							<p><a href="tel://1234567920">+ 010 4310 2812</a></p>
 						</div>
 					</div>
 				</div>
@@ -728,7 +711,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Email Address</h3>
-							<p><a href="mailto:info@yoursite.com">cookie00421@gmail.com</a></p>
+							<p><a href="mailto:info@yoursite.com">kimyeji315@gmail.com</a></p>
 						</div>
 					</div>
 				</div>
@@ -738,8 +721,8 @@
 							<span class="icon-globe"></span>
 						</div>
 						<div>
-							<h3 class="mb-4">Website</h3>
-							<p><a href="#">yoursite.com</a></p>
+							<h3 class="mb-4">Github</h3>
+							<p><a href="https://github.com/YEJI315">https://github.com/YEJI315</a></p>
 						</div>
 					</div>
 				</div>
