--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 								<span>Project complete</span>
 							</p>
 							<p><a target="_blank"
-									href="https://drive.google.com/file/d/1DDGPQ_sQA9_JW3pFuJkSFrP9pZqGsj58/view?usp=sharing"
+									href="https://drive.google.com/file/d/1OgW9bDQ0lmxjeAuxaSbQWIh64UvcZUb1/view?usp=sharing"
 									class="btn btn-primary py-3 px-3">이력서 다운받기</a></p>
 						</div>
 					</div>
@@ -369,25 +369,22 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2019.09-2020.08</span>
+								<span class="date">strengths</span>
 								<div class="d-flex">
-									<h2>웰리스 여행 상품 예약 플랫폼 개발</h2>
-									<div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
+									<h2>커뮤니케이션 능력</h2>
+									<!-- <div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
 											class="btn btn-outline-secondary"
 											href="https://github.com/congchu/portfolio-template-2">Github</a>&nbsp;<a
 											class="btn btn-outline-secondary" target="_blank"
 											href="/images/project_1_screenshot.png">스크린샷</a>&nbsp;<a
 											class="btn btn-outline-secondary" target="_blank"
 											href="https://www.wellytravel.com/">Link</a>
-									</div>
+									</div> -->
 								</div>
-								<span class="position">주식회사 더라피스</span>
-								<div> <b class="text-dark">기술 스택 : </b>React, Typescript, Next.js, Styled-Component,
-									MobX
+								<!-- <span class="position">주식회사 아이티윈스</span> -->
+								<div>독서를 통해 쌓은 풍부한 어휘력으로 적재적소에 맞는 표현을 구사하며, 대화의 맥락을 빠르게 파악하여 원활한 업무 진행이 가능해 타 회사, 타 팀과의 협업도 문제 없습니다.
 								</div>
-								<div> <b class="text-dark">주요 기능 : </b> 회원 관리 및 SNS 로그인, 상품 리스트 확인, 상품 상세 정보
-									확인, 예약 관리, 결제 </div>
-								<p> React </p>
+								<div>이러한 커뮤니케이션 능력으로 항상 원만한 인간관계를 유지했고 리더 역할을 수행하며 팀의 좋은 성과를 이끌어낸 경험이 있습니다.</div>
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -395,13 +392,9 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2014-2015</span>
-								<h2>Top 5 LeaderShip Exellence Winner</h2>
-								<span class="position">Cambridge University</span>
-								<p>A small river named Duden flows by their place and supplies it with the necessary
-									regelialia. It is a paradisematic country, in which roasted parts of sentences
-									fly
-									into your mouth.</p>
+								<span class="date">strengths</span>
+								<h2>꾸준한 완주 능력</h2>
+								한번 시작한 일은 끝까지 해내는 성격으로, 어떤 프로젝트든 완성도 높게 마무리하는 것을 중요하게 생각합니다. 이러한 끈기는 업무뿐만 아니라 개인적인 활동에서도 일관된 핵심 강점입니다.
 							</div>
 						</div>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -409,27 +402,10 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2014-2015</span>
-								<h2>Top 4 Web Tester</h2>
-								<span class="position">Cambridge University</span>
-								<p>A small river named Duden flows by their place and supplies it with the necessary
-									regelialia. It is a paradisematic country, in which roasted parts of sentences
-									fly
-									into your mouth.</p>
-							</div>
-						</div>
-						<div class="resume-wrap d-flex ftco-animate">
-							<div class="icon d-flex align-items-center justify-content-center">
-								<span class="flaticon-ideas"></span>
-							</div>
-							<div class="text pl-3">
-								<span class="date">2014-2015</span>
-								<h2>Art &amp; Creative Director</h2>
-								<span class="position">Cambridge University</span>
-								<p>A small river named Duden flows by their place and supplies it with the necessary
-									regelialia. It is a paradisematic country, in which roasted parts of sentences
-									fly
-									into your mouth.</p>
+								<span class="date">Growth Area</span>
+								<h2>기술적 확신</h2>
+								개발분야의 광범위함과 빠른 변화 속도로 인해 기술적 의견을 제시할 때 확신을 갖기 어려운 경향이 있습니다. '개발자는 항상 겸손해야한다'라는 모토로 겸손한 태도를 일관해왔지만, 때로는 이런 태도가 저를 위축시켜 필요한 의견을 적극적으로 제시하지 못하는 경우가 있습니다.
+								저의 꾸준한 완주 능력으로 관심사 뿐만 아니라 공부 범위를 넓혀 넓은 기술적 이해를 바탕으로 자신감 있게 의견을 제시할 수 있도록 발전시키고 싶습니다.
 							</div>
 						</div>
 					</div>
