add side project section

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 					<li class="nav-item"><a href="#education-section" class="nav-link"><span>Education</span></a></li>
 					<li class="nav-item"><a href="#experience-section" class="nav-link"><span>Work Experience</span></a></li>
-					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a>
-					</li>
-					<li class="nav-item"><a href="#strengths-section" class="nav-link"><span>Strengths & Growth Areas</span></a></li>
+					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
+					<li class="nav-item"><a href="#side-projects-section" class="nav-link"><span>Side Project</span></a></li>
+					<li class="nav-item"><a href="#strengths-section" class="nav-link"><span>Strengths & Growth</span></a></li>
 					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 				</ul>
 			</div>
@@ -123,7 +123,8 @@
 							<li><a href="#page-1">Education</a></li>
 							<li><a href="#page-2">Work Experience</a></li>
 							<li><a href="#page-3">Skills</a></li>
-							<li><a href="#page-4">Strengths & Growth Areas</a></li>
+							<li><a href="#page-4">Side Project</a></li>
+							<li><a href="#page-5">Strengths & Growth Areas</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -175,7 +176,8 @@
 							</div>
 						</div>
 					</div>
-				<div class="col-md-9" id="experience-section">
+				
+				<div class="col-md-12" id="experience-section">
 					<div id="page-2" class="page two"> 
 						<h2 class="heading">Work Experience</h2>
 						<div class="resume-wrap d-flex ftco-animate">
@@ -221,7 +223,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-9" id="skills-section">
+				<div class="col-md-12" id="skills-section">
 					<div id="page-3" class="page three">
 						<h2 class="heading">Skills</h2>
 						<div class="row progress-circle mb-5">
@@ -360,9 +362,34 @@
 							</div>
 						</div>
 					</div>
-				</div> 
-				<div class="col-md-9" id="strengths-section">
-					<div id="page-4" class="page four">
+				</div>
+				
+				<section class="ftco-section ftco-project">
+					<div  id="page-4" class="container-fluid px-md-0">
+						<div class="row no-gutters justify-content-center pb-5">
+							<div class="col-md-12 heading-section text-center ftco-animate">
+								<h1 class="big big-2">Projects</h1>
+								<h2 id="side-projects-section" class="mb-4">Side Project</h2>
+								<p>회사 밖에서 경험하고자 하는 스택은 사이드 프로젝트에 담아냈습니다.</p>
+							</div>
+						</div>
+						<div class="row no-gutters">
+							<div class="col-md-12">
+								<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+									style="background-image: url(images/ing.png);">
+									<div class="overlay"></div>
+									<div class="text text-center p-4">
+										<h3><a target="_blank" href="#">retainer - 교정 유지장치 착용 시간 측정 어플</a></h3>
+										<span>저 스스로의 필요성과 저와 같은 사람들이 분명히 있지 않을까 하여 만들어본 어플입니다. UI/UX 디자인부터 웹 호스팅까지 전체 영역을 담당하였습니다.</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<div class="col-md-12" id="strengths-section">
+					<div id="page-5" class="page four">
 						<h2 id="projects-section" class="heading">Strengths & Growth Areas</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
@@ -372,16 +399,7 @@
 								<span class="date">strengths</span>
 								<div class="d-flex">
 									<h2>커뮤니케이션 능력</h2>
-									<!-- <div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
-											class="btn btn-outline-secondary"
-											href="https://github.com/congchu/portfolio-template-2">Github</a>&nbsp;<a
-											class="btn btn-outline-secondary" target="_blank"
-											href="/images/project_1_screenshot.png">스크린샷</a>&nbsp;<a
-											class="btn btn-outline-secondary" target="_blank"
-											href="https://www.wellytravel.com/">Link</a>
-									</div> -->
 								</div>
-								<!-- <span class="position">주식회사 아이티윈스</span> -->
 								<div>독서를 통해 쌓은 풍부한 어휘력으로 적재적소에 맞는 표현을 구사하며, 대화의 맥락을 빠르게 파악하여 원활한 업무 진행이 가능해 타 회사, 타 팀과의 협업도 문제 없습니다.
 								</div>
 								<div>이러한 커뮤니케이션 능력으로 항상 원만한 인간관계를 유지했고 리더 역할을 수행하며 팀의 좋은 성과를 이끌어낸 경험이 있습니다.</div>
@@ -410,166 +428,6 @@
 						</div>
 					</div>
 				</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-
-	<!-- <section class="ftco-section ftco-project">
-		<div class="container-fluid px-md-0">
-			<div class="row no-gutters justify-content-center pb-5">
-				<div class="col-md-12 heading-section text-center ftco-animate">
-					<h1 class="big big-2">Projects</h1>
-					<h2 id="side-projects-section" class="mb-4">Side Projects</h2>
-					<p>꾸준히 사이드 프로젝트를 진행하며, 다양한 분야의 기술 스택을 경험해왔습니다.</p>
-				</div>
-			</div>
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/side-project-1.png);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a target="_blank" href="https://qpi.kr/"> QPI - 소개팅 서비스 소개 페이지 개발</a></h3>
-							<span>UI/UX 디자인부터 웹 호스팅까지 전체 영역을 담당하였습니다.</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-2.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-3.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-4.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-5.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-6.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section class="ftco-section" id="blog-section">
-		<div class="container">
-			<div class="row justify-content-center mb-5 pb-5">
-				<div class="col-md-7 heading-section text-center ftco-animate">
-					<h1 class="big big-2">Blog</h1>
-					<h2 class="mb-4">My Blog</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-				</div>
-			</div>
-			<div class="row d-flex">
-				<div class="col-md-4 d-flex ftco-animate">
-					<div class="blog-entry justify-content-end">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-						</a>
-						<div class="text mt-3 float-right d-block">
-							<h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
-							</h3>
-							<div class="d-flex align-items-center mb-3 meta">
-								<p class="mb-0">
-									<span class="mr-2">Sept. 12, 2019</span>
-									<a href="#" class="mr-2">Admin</a>
-									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-								</p>
-							</div>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 d-flex ftco-animate">
-					<div class="blog-entry justify-content-end">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-						</a>
-						<div class="text mt-3 float-right d-block">
-							<h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
-							</h3>
-							<div class="d-flex align-items-center mb-3 meta">
-								<p class="mb-0">
-									<span class="mr-2">Sept. 12, 2019</span>
-									<a href="#" class="mr-2">Admin</a>
-									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-								</p>
-							</div>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 d-flex ftco-animate">
-					<div class="blog-entry">
-						<a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-						</a>
-						<div class="text mt-3 float-right d-block">
-							<h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a>
-							</h3>
-							<div class="d-flex align-items-center mb-3 meta">
-								<p class="mb-0">
-									<span class="mr-2">Sept. 12, 2019</span>
-									<a href="#" class="mr-2">Admin</a>
-									<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
-								</p>
-							</div>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section> -->
-
-	<section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-md-7 ftco-animate text-center">
-					<h2>함께할 <span>회사를 찾는 중</span> 입니다.</h2>
-					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-					<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">연락주세요.</a></p>
 				</div>
 			</div>
 		</div>
