--- a/index.html
+++ b/index.html
@@ -376,10 +376,10 @@
 						<div class="row no-gutters">
 							<div class="col-md-12">
 								<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-									style="background-image: url(images/ing.png);">
+									style="background-image: url(images/retainer-appliance.JPG);">
 									<div class="overlay"></div>
 									<div class="text text-center p-4">
-										<h3><a target="_blank" href="#">retainer - 교정 유지장치 착용 시간 측정 어플</a></h3>
+										<h3><a target="_blank" href="https://github.com/YEJI315/retainer">retainer - 교정 유지장치 착용 시간 측정 어플</a></h3>
 										<span>저 스스로의 필요성과 저와 같은 사람들이 분명히 있지 않을까 하여 만들어본 어플입니다. UI/UX 디자인부터 웹 호스팅까지 전체 영역을 담당하였습니다.</span>
 									</div>
 								</div>
